cluster/workloads/networking/external-services/pihole/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: networking
subsets:
  - addresses:
      - ip: 10.0.16.4
    ports:
      - port: 80
        name: http
