cluster/workloads/networking/external-services/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: networking
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
