cluster/workloads/networking/external-services/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: networking
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "pihole.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80

  tls:
    - hosts:
        - *host
